# MassyTools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  IsotopicPattern,py  LICENSE  MassyTools.ini  MassyTools.py  README.md  Settings.txt  Task List  config.py  geany_run_script.bat  makefile  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml
MassyTools/gui/: about_window.py  batch_process_progress_window.py  batch_window.py  cite_window.py  experimental_settings_window.py  output_window.py  progress_bar.py  settings_window.py  tooltip.py  version.py
MassyTools/util/: batch_process.py  classification.py  file_parser.py  functions.py
blocks/: Ac.block  F.block  M.block  Per.block  _K.block  _P.block  ab.block  acetate.block  formate.block  potassium.block  sodium.block
blocks/Additional/: MurineG.block  MurineGl.block  R.block
data/: A10_0_A10_1.xy  A12_0_A12_1.xy  A4_0_A4_1.xy  A6_0_A6_1.xy  A8_0_A8_1.xy  A9_0_A9_1.xy  analytes.txt  calibrants.txt
demo data/: A11_0_A11_1.xy  A1_0_A1_1.xy  A2_0_A2_1.xy  A3_0_A3_1.xy  A5_0_A5_1.xy  A7_0_A7_1.xy  analytes.txt  calibrants.txt
libs/: mzML.py  varnames.py  xy.py
src/blocks/: E.block  _C.block  aa.block  chloride.block  electron.block
src/blocks/Additional/: T.block  U.block
src/massytools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/massytools/blocks/: H.block  L.block  N.block  P.block  S.block  Su.block  _F.block  _H.block  _N.block  _Na.block  _O.block  _S.block  free.block  proton.block  protonLoss.block  reduced.block
src/massytools/blocks/Additional/: MurineGe.block  Q.block
tests/blocks/: test_blocks.py
tests/spectrum/: test_spectrum.py
