[metadata]
name = massytools
version = 22.06.11
description = Mass Spectrum Quantitiation Tool.
author = Bas Cornelis Jansen
author_email = bas.c.jansen@gmail.com
description_file = file: README.md
long_description = Apache 2.0
license_file = LICENSE
url = https://github.com/Tarskin/MassyTools
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
keywords =
    ms
    mass spectrometry
    quantitation
    proteomics
    glycomics
    python
[options]
zip_safe = false
package_dir=
    =src
packages = find:
python_requires = >= 3.9.10
setup_requires =
    setuptools >=46.4.0
    wheel >= 0.36.2
include_package_data = true

[options.packages.find]
where = src

[options.package_data]
massytools =
    py.typed

[options.data_files]
massytools =
    LICENSE
    README.md

[bdist_wheel]
universal = true

[flake8]
avoid-escape = False
exclude =
    .git
    .eggs
    *.egg-info
    data
    venv
inline-quotes = double
max-line-length = 88

[isort]
profile = black

[mypy]
allow_untyped_globals = False
color_output = True
error_summary = True
pretty = True
python_version = 3.9
show_absolute_path = True
show_column_numers = True
show_error_codes = True
show_error_context = True
show_traceback = True
verbosity = 0
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True

[tool:pytest]
addopts =
    -ra -s
    --color=yes
    --doctest-modules
    --verbosity=1
junit_family = xunit1
markers =
    slow: Mark a test as slow
norecursedirs =
    .git
    data
    venv
python_files = test_*.py
testpaths =
    tests

[pytest-watch]
; The extensions should be listed on one line!
ext = .css,.csv,.html,.js,.json,.mjs,.py,.yaml,.yml
watchpaths =
    ./src
    ./tests
    ./data
    ../frozendict/src
    ../jai_lib/src
